2003-06-11  Thorsten Jordan <thorsten_jordan@gmx.de>
	* released version 0.0.10 and updated version number to 0.0.11

2003-06-07  Thorsten Jordan <thorsten_jordan@gmx.de>
	* shifted damage display to own class, some adds.

2003-05-31  Markus Petermann  <m.petermann@gmx.net>
	* date.h:
	  - Month october added.
	
2003-05-30  Thorsten Jordan <thorsten_jordan@gmx.de>

	* global_data.h, global_data.cpp
	  - introduced image making. Maybe we should use SDL-mm?
	* user_interface.h, user_interface.cpp
	  - display of background image as a start.
	    this should move to submarine_interface.cpp later
	    Maybe we should load images on demand when switching screens?
	    Or keeping them in system memory and copying them when switching
	    screens? This would save a lot of graphic memory.

2003-05-14  Markus Petermann  <m.petermann@gmx.net>

	* submarine_VII.cpp, submarine_XXI.cpp:
	  - Fuel and battery consumption factors modified: The original t values where
	    calculated for knots, not meters per seconds.
	* user_interface.cpp, submarine_interface.cpp:
	  - New gauges for diesel fuel amount and battery charge.
	* game.cpp:
	  - Use the torpedos position as detonation point, not the ships position.
	* global_data.h, global_data.cpp:
	  - Load one further gauge.
	* parser.cpp:
	  - New tokens for fuel amount and battery charge.
	* ship.cpp:
	  - Set fuel_level default value to 1.
	  - Use parser for mission specific fuel values.
	  - Call ai only when AI is available. That is not the case on the players unit.
	* ship.h:
	  - Method to return fuel_level.
	* submarine.cpp:
	  - Set battery_level default value to 1.
	  - Use parser for mission specific battery charge.
	  - Call ship::simulate and not sea_object::simulate method. ship is the direct
	    father class of submarine, not sea_object.
	* submarine.h:
	  - Method to return battery_level.
	* submarine_XXI.cpp, submarine_VII.cpp:
	  - Fuel consumption and battery decharge rate modified. The original values